welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:17: error: too many arguments for method faireV: ()Unit
faireV(c: Color.YELLOW)
      ^